test/fail/generated/test_Tanhshrink/model.pb
pytorch0.3:¤
è
01"Tanh2Ù/home/lufang/gitrepos/onnx-fb-universe/repos/pytorch/torch/nn/functional.py(750): tanhshrink
/home/lufang/gitrepos/onnx-fb-universe/repos/pytorch/torch/nn/modules/activation.py(590): forward
/home/lufang/gitrepos/onnx-fb-universe/repos/pytorch/torch/nn/modules/module.py(325): __call__
/home/lufang/gitrepos/onnx-fb-universe/repos/pytorch/torch/jit/__init__.py(245): forward
/home/lufang/gitrepos/onnx-fb-universe/repos/pytorch/torch/nn/modules/module.py(325): __call__
/home/lufang/gitrepos/onnx-fb-universe/repos/pytorch/torch/jit/__init__.py(227): trace
/home/lufang/gitrepos/onnx-fb-universe/repos/pytorch/torch/onnx/__init__.py(120): _export
convert_pytorch_test.py(69): convert_tests
convert_pytorch_test.py(102): <module>

ê
0
12"Sub2Ù/home/lufang/gitrepos/onnx-fb-universe/repos/pytorch/torch/nn/functional.py(750): tanhshrink
/home/lufang/gitrepos/onnx-fb-universe/repos/pytorch/torch/nn/modules/activation.py(590): forward
/home/lufang/gitrepos/onnx-fb-universe/repos/pytorch/torch/nn/modules/module.py(325): __call__
/home/lufang/gitrepos/onnx-fb-universe/repos/pytorch/torch/jit/__init__.py(245): forward
/home/lufang/gitrepos/onnx-fb-universe/repos/pytorch/torch/nn/modules/module.py(325): __call__
/home/lufang/gitrepos/onnx-fb-universe/repos/pytorch/torch/jit/__init__.py(227): trace
/home/lufang/gitrepos/onnx-fb-universe/repos/pytorch/torch/onnx/__init__.py(120): _export
convert_pytorch_test.py(69): convert_tests
convert_pytorch_test.py(102): <module>
torch-jit-exportZ
0




b
2




B